convert BuiltInHelpPlugin into modern language
GitOrigin-RevId: b6b15d23760379cf23f4591c74396b49f9ff4122